Meta tags + Manifest

--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta lang="en">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="//rawcdn.githack.com/xuset/idb-kv-store/fc51e037c8bca7a143de379402b55d3f8a04971b/idbkvstore.min.js"></script>
     <script src="script.js" type="module" defer></script>
     <script src="//unpkg.com/vue@3"></script>
+    <link rel="manifest" href="manifest.webmanifest">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="stylesheet/less" type="text/css" href="style.less" />
@@ -15,6 +17,30 @@
       href="//fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" type="image/png" href="icon-32x32.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta name="format-detection" content="telephone=no"/>
+    <meta name="title" content="Podcasts player"/>
+    <meta name="author" content="Explosion-Scratch"/>
+    <meta name="keywords" content="podcasts, podcast, player, download, javascript, pwa, free, zip, music"/>
+    <meta name="robots" content="index,follow"/>
+    <meta name="language" content="English"/>
+    <meta name="description" content="Play, download, and view info about any podcast"/>
+    <meta name="theme-color" content="#315C7B"/>
+    <meta name="og:type" content="website"/>
+    <meta name="apple-mobile-web-app-title" content="Podcasts player"/>
+    <meta name="og_site_name" content="Podcasts player"/>
+    <meta name="og:site_name" content="Podcasts player"/>
+    <meta name="og:locale" content="en_US"/>
+    <meta name="og:url" content="https://explosion-scratch.github.io/podcasts_player"/>
+    <meta name="og:title" content="Podcasts player"/>
+    <meta name="og:description" content="Play, download, and view info about any podcast"/>
+    <meta name="og:image" content="big_img.png"/>
+    <meta name="twitter:card" content="summary_large_image"/>
+    <meta name="twitter:url" content="https://explosion-scratch.github.io/podcasts_player"/>
+    <meta name="twitter:title" content="Podcasts player"/>
+    <meta name="twitter:description" content="Play, download, and view info about any podcast"/>
+    <meta name="twitter:image" content="big_img.png"/>
     <title>Podcasts player</title>
   </head>
 
