--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta lang="en">
+    <base href="https://explosion-scratch.github.io/podcasts_player/">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="//rawcdn.githack.com/xuset/idb-kv-store/fc51e037c8bca7a143de379402b55d3f8a04971b/idbkvstore.min.js"></script>
@@ -35,12 +36,12 @@
     <meta name="og:url" content="https://explosion-scratch.github.io/podcasts_player"/>
     <meta name="og:title" content="Podcasts player"/>
     <meta name="og:description" content="Play, download, and view info about any podcast"/>
-    <meta name="og:image" content="big_img.png"/>
+    <meta name="og:image" content="https://explosion-scratch.github.io/podcasts_player/big_img.png"/>
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:url" content="https://explosion-scratch.github.io/podcasts_player"/>
     <meta name="twitter:title" content="Podcasts player"/>
     <meta name="twitter:description" content="Play, download, and view info about any podcast"/>
-    <meta name="twitter:image" content="big_img.png"/>
+    <meta name="twitter:image" content="https://explosion-scratch.github.io/podcasts_player/big_img.png"/>
     <title>Podcasts player</title>
   </head>
 
